--- a/Papeleria.MVC/Views/Home/Index.cshtml
+++ b/Papeleria.MVC/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿ @model Papeleria.LogicaNegocio.Entidades.Usuario;
+﻿ @model Empresa.LogicaDeNegocio.Sistema.Usuario;
 
 @{
     ViewData["Title"] = "Login";
@@ -13,14 +13,14 @@
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="User" class="control-label">Nombre de usuario</label>
-                <input asp-for="User" class="form-control" />
-                <span asp-validation-for="User" class="text-danger"></span>
+                <label asp-for="Email" class="control-label">Nombre de usuario</label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Clave" class="control-label">Contraseña</label>
-                <input type="password" asp-for="Clave" class="form-control" />
-                <span asp-validation-for="Clave" class="text-danger"></span>
+                <label asp-for="Contrasenia" class="control-label">Contraseña</label>
+                <input type="password" asp-for="Contrasenia" class="form-control" />
+                <span asp-validation-for="Contrasenia" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Iniciar sesión" class="btn btn-primary" />
