Login pronto y borrar casi

--- a/Papeleria.MVC/Views/Home/Index.cshtml
+++ b/Papeleria.MVC/Views/Home/Index.cshtml
@@ -4,16 +4,16 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login</h1>
+<h1>INICIO DE SESIÓN</h1>
 <hr />
-@ViewBag.Error
+<partial name="_Mensajes" />
 <div class="row">
 
     <div class="col-md-4">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label">Nombre de usuario</label>
+                <label asp-for="Email" class="control-label">Email</label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
@@ -22,15 +22,10 @@
                 <input type="password" asp-for="Contrasenia" class="form-control" />
                 <span asp-validation-for="Contrasenia" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <input type="submit" value="Iniciar sesión" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-
-@* @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-} *@
