--- a/Papeleria.MVC/Views/Usuarios/Index.cshtml
+++ b/Papeleria.MVC/Views/Usuarios/Index.cshtml
@@ -51,8 +51,8 @@
                     @Html.DisplayFor(modelItem => item.Contrasenia)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Borrar", "Delete", new { id = item.Id })
                 </td>
             </tr>
         }
