--- a/Papeleria.MVC/Views/Usuarios/Delete.cshtml
+++ b/Papeleria.MVC/Views/Usuarios/Delete.cshtml
@@ -1,14 +1,8 @@
-﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Usuarios.UsuarioListadosDto
+﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Usuarios.UsuarioBorrarDto
 
-@{
-    ViewData["Title"] = "Delete";
-}
-
-<h1>Delete</h1>
-
-<h3>Esta seguro que desea eliminar este usuario?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>UsuarioListadosDto</h4>
+    <h4>UsuarioBorrarDto</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -36,7 +30,7 @@
             @Html.DisplayFor(model => model.Apellido)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Contrasenia)
+            Contraseña
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Contrasenia)
@@ -45,6 +39,7 @@
     
     <form asp-action="Delete">
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        @Html.CheckBox("IsChecked") <span>Entiendo que esta operación es riesgosa</span>
+        <a asp-action="Index">Volver a la lista</a>
     </form>
 </div>
