--- a/Papeleria.MVC/Views/Shared/_Layout.cshtml
+++ b/Papeleria.MVC/Views/Shared/_Layout.cshtml
@@ -20,11 +20,14 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
                         
                         @if (Context.Session.GetInt32("LogueadoID") != null)
                         {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark btn btn-danger" asp-area="" asp-controller="Home" asp-action="Logout">LOGOUT</a>
                             </li>
