--- a/Papeleria.MVC/Views/Usuarios/Delete.cshtml
+++ b/Papeleria.MVC/Views/Usuarios/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Usuarios.UsuarioBorrarDto
+﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Usuarios.ArticuloBorrarDto
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
