--- a/Papeleria.MVC/Views/Shared/_Layout.cshtml
+++ b/Papeleria.MVC/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Articulos" asp-action="Index">Articulos</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark btn btn-danger" asp-area="" asp-controller="Home" asp-action="Logout">LOGOUT</a>
                             </li>
                         }
