--- a/Papeleria.MVC/Views/Articulos/Edit.cshtml
+++ b/Papeleria.MVC/Views/Articulos/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Articulos.ArticuloModificarDTO
+﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Articulos.ArticuloDTO
 
 @{
     ViewData["Title"] = "Edit";
