--- a/Papeleria.MVC/Views/Articulos/Index.cshtml
+++ b/Papeleria.MVC/Views/Articulos/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Articulos.ArticuloListadosDto>
+﻿@model IEnumerable<Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Articulos.ArticuloDTO>
 
 @{
     ViewData["Title"] = "Index";
