--- a/Papeleria.MVC/Views/Clientes/Details.cshtml
+++ b/Papeleria.MVC/Views/Clientes/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Clientes.ClienteListadosDto
+﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Clientes.ClienteDTO
 
 <div>
     <h4>Detalles del cliente</h4>
