--- a/Papeleria.MVC/Views/Clientes/Index.cshtml
+++ b/Papeleria.MVC/Views/Clientes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Clientes.ClienteListadosDto>
+﻿@model IEnumerable<Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Clientes.ClienteDTO>
 
 <p>
     <a asp-action="Create">Create New</a>
