--- a/Papeleria.MVC/Views/Pedidos/Crear.cshtml
+++ b/Papeleria.MVC/Views/Pedidos/Crear.cshtml
@@ -1,4 +1,5 @@
-﻿@model Papeleria.MVC.Models.PedidosModels.PedidoAltaModel
+﻿@using Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Pedidos
+@model Papeleria.MVC.Models.PedidosModels.PedidoAltaModel
 
 <h1>Crear Pedido</h1>
 
@@ -7,7 +8,7 @@
 
     <div class="form-group">
         <label asp-for="ClienteId">Cliente:</label>
-        <select asp-for="ClienteId" class="form-control" asp-items="@(new SelectList(ViewBag.Clientes, "Id", "rut"))">
+        <select asp-for="ClienteId" class="form-control" asp-items="@(new SelectList(ViewBag.Clientes, "Id", "razonSocial"))">
             <option value="">Seleccionar cliente...</option>
         </select>
         <span asp-validation-for="ClienteId" class="text-danger"></span>
@@ -18,8 +19,22 @@
         <input asp-for="FechaEntrega" class="form-control" type="date" />
         <span asp-validation-for="FechaEntrega" class="text-danger"></span>
     </div>
+    <div class="form-group">
+        Articulos:
+        @if (ViewBag.LineasPedido != null && ViewBag.LineasPedido.Count > 0)
+        {
+            @foreach (LineaPedidoDTO linea in ViewBag.LineasPedido)
+            {
+                <p>@linea.NombreArticulo - Cantidad: @linea.Cantidad</p>
+            }
+        }
+    </div>
+    <button type="submit" class="btn btn-success">Crear Pedido</button>
+</form>
 
     <div class="form-group">
+        <form asp-action="AddArticulo"> 
+
         <label>Artículos:</label>
         <table class="table table-bordered" id="lineasPedido">
             <thead>
@@ -33,20 +48,22 @@
                 {
                     <tr>
                         <td>
-                            <select asp-for="@linea.ArticuloId" class="form-control" asp-items="@(new SelectList(ViewBag.Articulos, "Id", "NombreArticulo"))">
+                            <select asp-for="ArticuloId" class="form-control" asp-items="@(new SelectList(ViewBag.Articulos, "Id", "NombreArticulo"))">
                                 <option value="">Seleccionar artículo...</option>
                             </select>
+                            <span asp-validation-for="ArticuloId" class="text-danger"></span>
+
                         </td>
-                        <td><input asp-for="@linea.Cantidad" class="form-control" /></td>
+                        <td><input asp-for="Cantidad" class="form-control" /></td>
+                        <span asp-validation-for="Cantidad" class="text-danger"></span>
                     </tr>
                 }
             </tbody>
         </table>
-        <button type="button" class="btn btn-primary" id="agregarLinea">Agregar Línea de Pedido</button>
+        <button type="submit" class="btn btn-primary" id="agregarLinea">Agregar Línea de Pedido</button>
+        </form>
     </div>
 
-    <button type="submit" class="btn btn-success">Crear Pedido</button>
-</form>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
