--- a/Papeleria.MVC/Views/Usuarios/Create.cshtml
+++ b/Papeleria.MVC/Views/Usuarios/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Usuario.UsuarioAltaDto
+﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Usuarios.UsuarioDTO
 
 @{
     ViewData["Title"] = "Crear Usuario";
