--- a/Papeleria.MVC/Views/Usuarios/Edit.cshtml
+++ b/Papeleria.MVC/Views/Usuarios/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Usuarios.UsuarioModificarDto
+﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Usuarios.UsuarioDTO
 
 @{
     ViewData["Title"] = "Edit";
