--- a/Papeleria.MVC/Views/Usuarios/Index.cshtml
+++ b/Papeleria.MVC/Views/Usuarios/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Usuarios.UsuarioListadosDto>
+﻿@model IEnumerable<Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Usuarios.UsuarioDTO>
 
 @{
     ViewData["Title"] = "Index";
