--- a/Papeleria.MVC/Views/Articulos/Create.cshtml
+++ b/Papeleria.MVC/Views/Articulos/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Articulos.ArticuloAltaDto
+﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Articulos.ArticuloDTO
 
 @{
     ViewData["Title"] = "Crear articulo";
