--- a/Papeleria.MVC/Views/Usuarios/Delete.cshtml
+++ b/Papeleria.MVC/Views/Usuarios/Delete.cshtml
@@ -1,8 +1,8 @@
-﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Usuarios.UsuarioBorrarDto
+﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Usuarios.UsuarioDTO
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>UsuarioBorrarDto</h4>
+    <h4>UsuarioDTO</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
