--- a/Papeleria.MVC/Views/Pedidos/Crear.cshtml
+++ b/Papeleria.MVC/Views/Pedidos/Crear.cshtml
@@ -19,21 +19,46 @@
         <input asp-for="FechaEntrega" class="form-control" type="date" />
         <span asp-validation-for="FechaEntrega" class="text-danger"></span>
     </div>
+
     <div class="form-group">
-        Articulos:
-        @if (ViewBag.LineasPedido != null && ViewBag.LineasPedido.Count > 0)
-        {
-            @foreach (LineaPedidoDTO linea in ViewBag.LineasPedido)
-            {
-                <p>@linea.NombreArticulo - Cantidad: @linea.Cantidad</p>
-            }
-        }
+        <label asp-for="iva">Valor IVA:</label>
+        <input asp-for="iva" class="form-control" type="number" value="22" />
+        <span asp-validation-for="iva" class="text-danger"></span>
     </div>
+    @if (ViewBag.LineasPedido != null && ViewBag.LineasPedido.Count > 0)
+    {
+        <div class="form-group">
+            <label>Articulos pedidos:</label>
+            <table class="table table-bordered" id="lineasPedidoAgregados">
+                <thead>
+                    <tr>
+                        <th>Articulo</th>
+                        <th>Cantidad</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+                @foreach (LineaPedidoDTO linea in ViewBag.LineasPedido)
+                {
+                    <tr>
+                        <td>
+                            @linea.NombreArticulo
+
+                        </td>
+                        <td>
+                            Cantidad: @linea.Cantidad
+
+                        </td>
+                    </tr>
+                }
+            </table>
+        </div>
+    }
     <button type="submit" class="btn btn-success">Crear Pedido</button>
 </form>
 
-    <div class="form-group">
-        <form asp-action="AddArticulo"> 
+<div class="form-group">
+    <form asp-action="AddArticulo">
 
         <label>Artículos:</label>
         <table class="table table-bordered" id="lineasPedido">
@@ -61,10 +86,12 @@
             </tbody>
         </table>
         <button type="submit" class="btn btn-primary" id="agregarLinea">Agregar Línea de Pedido</button>
-        </form>
-    </div>
+    </form>
+</div>
 
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
