--- a/Papeleria.MVC/Views/Pedidos/Index.cshtml
+++ b/Papeleria.MVC/Views/Pedidos/Index.cshtml
@@ -7,16 +7,13 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Crear">Crear nuevo</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.FechaPedido)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaEntrega)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.precioFinal)
@@ -29,9 +26,6 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaPedido)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaEntrega)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.precioFinal)
