Actualizacion de verificaciones

--- a/Papeleria.MVC/Views/Articulos/Create.cshtml
+++ b/Papeleria.MVC/Views/Articulos/Create.cshtml
@@ -8,6 +8,7 @@
 
 <h4>Articulo</h4>
 <hr />
+<partial name="_Mensajes" />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
