--- a/Papeleria.MVC/Views/Articulos/Index.cshtml
+++ b/Papeleria.MVC/Views/Articulos/Index.cshtml
@@ -4,11 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>ARTICULOS</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear nuevo articulo</a>
 </p>
+<partial name="_Mensajes" />
 <table class="table">
     <thead>
         <tr>
