--- a/Papeleria.MVC/Views/Usuarios/Create.cshtml
+++ b/Papeleria.MVC/Views/Usuarios/Create.cshtml
@@ -29,7 +29,7 @@
                 <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Contrasenia" class="control-label"></label>
+                <label asp-for="Contrasenia" class="control-label">Contraseña</label>
                 <input asp-for="Contrasenia" class="form-control" />
                 <span asp-validation-for="Contrasenia" class="text-danger"></span>
             </div>
@@ -41,7 +41,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Lista</a>
 </div>
 
 @section Scripts {
