--- a/Papeleria.MVC/Views/Usuarios/Edit.cshtml
+++ b/Papeleria.MVC/Views/Usuarios/Edit.cshtml
@@ -7,6 +7,7 @@
 <h1>Editar Usuario</h1>
 
 <hr />
+<partial name="_Mensajes" />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
@@ -37,14 +38,14 @@
                 <span asp-validation-for="Contrasenia" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Lista</a>
 </div>
 
 @section Scripts {
