--- a/Papeleria.MVC/Views/Usuarios/Delete.cshtml
+++ b/Papeleria.MVC/Views/Usuarios/Delete.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Usuarios.UsuarioDTO
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Estas seguro que deseas eliminar el usuario?</h3>
+<partial name="_Mensajes" />
 <div>
     <h4>UsuarioDTO</h4>
     <hr />
