--- a/Papeleria.MVC/Views/Articulos/Index.cshtml
+++ b/Papeleria.MVC/Views/Articulos/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>ARTICULOS</h1>
 
 <p>
-    <a asp-action="Create">Crear nuevo articulo</a>
+    <a asp-action="Create">CREAR ARTICULOS</a>
 </p>
 <partial name="_Mensajes" />
 <table class="table">
