--- a/Papeleria.MVC/Views/Clientes/Index.cshtml
+++ b/Papeleria.MVC/Views/Clientes/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Papeleria.LogicaAplicacion.DataTransferObjects.Dtos.Clientes.ClienteDTO>
 
 <p>
-    <a asp-action="Create">CREAR NUEVO CLIENTE</a>
+    <a asp-action="Create">CREAR CLIENTE</a>
 </p>
 <h1>BUSCAR CLIENTES</h1>
 <hr />
