--- a/Papeleria.MVC/Views/Usuarios/Index.cshtml
+++ b/Papeleria.MVC/Views/Usuarios/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Lista de usuarios</h1>
 
 <p>
-    <a asp-action="Create">Crear nuevo</a>
+    <a asp-action="Create">CREAR USUARIO</a>
 </p>
 <partial name="_Mensajes" />
 <table class="table">
