--- a/Papeleria.MVC/Views/Pedidos/Index.cshtml
+++ b/Papeleria.MVC/Views/Pedidos/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Crear">Create New</a>
+    <a asp-action="Crear">CREAR PEDIDO</a>
 </p>
 <h1>BUSCAR PEDIDOS DESDE FECHA</h1>
 <hr />
