--- a/Papeleria.MVC/Views/Pedidos/Index.cshtml
+++ b/Papeleria.MVC/Views/Pedidos/Index.cshtml
@@ -17,7 +17,7 @@
     <input type="submit" value="Filtrar" name="submitButton" />
 </form>
 
-<br />
+<p>@ViewBag.Mensaje</p>
 <table class="table">
     <thead>
         <tr>
