--- a/Papeleria.MVC/Views/Pedidos/Index.cshtml
+++ b/Papeleria.MVC/Views/Pedidos/Index.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Pedidos pendientes de entrega</h1>
 
 <p>
     <a asp-action="Crear">CREAR PEDIDO</a>
 </p>
-<h1>BUSCAR PEDIDOS DESDE FECHA</h1>
+<h4>BUSCAR PEDIDOS DESDE FECHA</h4>
 <hr />
 
 <form method="post">
@@ -29,6 +29,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.precioFinal)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.entregado)
             </th>
             <th></th>
         </tr>
@@ -55,6 +58,9 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.precioFinal)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.entregado)
                     </td>
                     <td>
                         <a asp-action="Details" asp-route-id="@item.Id">Detalle</a> |
