--- a/Papeleria.MVC/Views/Pedidos/Index.cshtml
+++ b/Papeleria.MVC/Views/Pedidos/Index.cshtml
@@ -22,16 +22,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FechaPedido)
+                Fecha Pedido
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ClienteID)
+                Razon Social
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.precioFinal)
+                Precio Final $
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.entregado)
+                Entregado
             </th>
             <th></th>
         </tr>
