--- a/Papeleria.MVC/Views/Clientes/ListaSuperaronMonto.cshtml
+++ b/Papeleria.MVC/Views/Clientes/ListaSuperaronMonto.cshtml
@@ -4,19 +4,19 @@
     ViewData["Title"] = "ListaSuperaronMonto";
 }
 
-<h1>ListaSuperaronMonto</h1>
+<h1>CLIENTES QUE SUPERARON MONTO DE $@ViewBag.Monto</h1>
 
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
+                ID
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.rut)
+                RUT
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.razonSocial)
+                Razon Social
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Calle)
@@ -30,7 +30,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.Distancia)
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -57,12 +56,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Distancia)
             </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
         </tr>
 }
     </tbody>
 </table>
+
+<div>
+    <a asp-action="Index">Lista</a>
+</div>
