--- a/Papeleria.MVC/Views/Pedidos/Index.cshtml
+++ b/Papeleria.MVC/Views/Pedidos/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Pedidos pendientes de entrega</h1>
+<h1>Pedidos registrados</h1>
 
 <p>
     <a asp-action="Crear">CREAR PEDIDO</a>
